--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.1",
+    "face-api.js": "^0.22.2",
     "mongoose": "^7.4.2",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.3"
   }
 }
